@@ -39,11 +39,24 @@ def guess_format(filename):
     except:
         raise TypeError("Cannot determine coordinate format for %r" % filename)
     
+    # XYZReader is setup to handle both plain and compressed (bzip2, gz) files
+    # ..so if the first file extension is bzip2 or gz, look at the one to the left of it 
+    if ext in ("bz2","gz"):
+	    root, ext = os.path.splitext(root)
+	    try:
+		  if ext.startswith('.'):
+			ext = ext[1:]
+		  ext = ext.lower()
+	    except:
+		  raise TypeError("Cannot determine coordinate format for %r" % filename)	
+	    if ext != "xyz": # only bzipped xyz files can be parsed right now (might be useful to parse foo.pdb.bz2 ?) 
+		  raise TypeError("Cannot handle %r in bzipped format" % filename)    		      		    	
+   
     if not ext in MDAnalysis.coordinates._trajectory_readers:
         raise TypeError("Unknown coordinate trajectory extension %r from %r; only %r are implemented in MDAnalysis." % 
                         (ext, filename, MDAnalysis.coordinates._trajectory_readers.keys()))
     return ext
-
+    
 def _veclength(v):
     """Length of vector *v*."""
     return numpy.sqrt(numpy.dot(v,v))
